dev(narugo): stop the e621 index

--- a/.github/workflows/e621_index.yml
+++ b/.github/workflows/e621_index.yml
@@ -4,8 +4,8 @@ name: E621 Index
 on:
   #  push:
   workflow_dispatch:
-  schedule:
-    - cron: '0 14 * * 0,3'
+#  schedule:
+#    - cron: '0 14 * * 0,3'
 
 jobs:
   unittest:
