--- a/.github/workflows/gb_idxp.yml
+++ b/.github/workflows/gb_idxp.yml
@@ -68,6 +68,8 @@ jobs:
           CI: 'true'
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           REMOTE_REPOSITORY_GB: ${{ secrets.REMOTE_REPOSITORY_GB }}
+          GELBOORU_USER_ID: ${{ secrets.GELBOORU_USER_ID }}
+          GELBOORU_API_KEY: ${{ secrets.GELBOORU_API_KEY }}
         shell: bash
         run: |
           python -m inf.gelbooru.index_prev
